crates/validation/tests/snapshots/skim_projections_tests__write_schema_redact_errors_with_standalone_read_schema.snap
---
source: crates/validation/tests/skim_projections_tests.rs
expression: errors
---
[
    "`block` redact strategy cannot be applied at '/message' because it must exist",
]
