crates/validation/tests/snapshots/skim_projections_tests__write_schema_redact_with_standalone_read_schema.snap
---
source: crates/validation/tests/skim_projections_tests.rs
expression: "(projections, errors)"
---
(
    [
        (
            "_meta/flow_truncated",
            "/_meta/flow_truncated",
            "REDACT_UNSET",
        ),
        (
            "flow_document",
            "",
            "REDACT_UNSET",
        ),
        (
            "flow_published_at",
            "/_meta/uuid",
            "REDACT_UNSET",
        ),
        (
            "id",
            "/id",
            "REDACT_UNSET",
        ),
        (
            "secret",
            "/secret",
            "REDACT_BLOCK",
        ),
    ],
    [],
)
